manifests/own-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: own-app
  labels:
    name: own-app
