manifests/test-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    name: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test-app
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: nginxdemos/hello
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
---
kind: Service
apiVersion: v1
metadata:
  name: test-app
  namespace: test-app
  labels:
    app: test-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: test-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  namespace: test-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - test.sellwerk-ws-prep.akampf.dev
      secretName: test-app-tls
  rules:
    - host: test.sellwerk-ws-prep.akampf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  name: http
